...
                                <connections>
                                    <action selector="startActivityTimer:" destination="Jey-R4-xw8" eventType="touchUpInside" id="rgQ-XN-Xss"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vz6-MS-2cl">
                                <rect key="frame" x="156" y="617" width="63" height="30"/>
                                <state key="normal" title="Activities"/>
                                <connections>
                                    <action selector="showActivityView:" destination="Jey-R4-xw8" eventType="touchUpInside" id="Dzu-NL-BKQ"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Generic" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CVh-Kw-CXq">
                                <rect key="frame" x="16" y="209" width="343" height="21"/>
...
            </objects>
            <point key="canvasLocation" x="793" y="1837"/>
        </scene>
        <!--Activity-->
        <scene sceneID="3Ga-IY-g6d">
            <objects>
                <tableViewController storyboardIdentifier="ActivityTableViewController" title="Activity" id="FaB-wC-3lj" customClass="ActivityTableViewController" customModule="So_Much_So_Little" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="aHD-Yw-VgJ">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="ActivityCell" textLabel="ueb-jv-fC9" detailTextLabel="8c8-Hb-t2J" style="IBUITableViewCellStyleSubtitle" id="urU-7y-JZy">
...
