...
    typealias TodayType = Bool
    typealias TodayDisplayOrderType = NSNumber
    
    typealias ProjectType = Project
    typealias TimeBoxesType = Set<Timebox>
    
    static let defaultTask = "New Activity"

    convenience init(task: String, context: NSManagedObjectContext) {
        let className = type(of: self).className
        let entity = NSEntityDescription.entity(forEntityName: className, in: context)!
        
        self.init(entity: entity, insertInto: context)
...
