//
//  So_Much_So_LittleUITests.swift
//  So Much So LittleUITests
//
//  Created by Adland Lee on 3/2/22.
//  Copyright © 2022 Adland Lee. All rights reserved.
//

import XCTest

class So_Much_So_LittleUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()

        // Use recording to get started writing UI tests.
        
        app.buttons["Activities"].tap()
        app.tabBars["Tab Bar"].buttons["Activity"].tap()
        app.navigationBars["Activity"].buttons["Add"].tap()
        
        let newActivityTextField = app.tables/*@START_MENU_TOKEN@*/.textFields["New Activity"]/*[[".cells.textFields[\"New Activity\"]",".textFields[\"New Activity\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/
        newActivityTextField.tap()
        
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, watchOS 7.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTApplicationLaunchMetric()]) {
                XCUIApplication().launch()
            }
        }
    }
}
